# transcripts

./: .gitignore  Justfile  README.md  download.py  pyproject.toml  requirements.in  requirements.txt  transcribe.py  url.py
data/transcripts/: example_transcript.txt
scripts/: initial_setup.ps1  make_requirements.py
src/old/: download.py  transcribe.py  url.py
src/transcripts/: main.py
src/transcripts/gui/: form.py
src/transcripts/utils/: __init__.py  download.py  utils.py
